# perlin-numpy

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
perlin_numpy/: perlin2d.py  perlin3d.py
